UTS-1117 Make title/subtitle consistent with Element Status Chart. Use standard up.time font everywhere. Fix incorrect default refresh interval on pie. Make the title link actually work. Move around the spacing so there's no gap at the top. Fix stop timer clearing interval instead of timeout on pie. Fix incorrect refresh multiple on pie. Fix not being able to disable timeout on pie.

--- a/groupStatus.css
+++ b/groupStatus.css
@@ -6,6 +6,11 @@ body {
 	overflow: auto !important;
 }
 
+a {
+	text-decoration: inherit;
+	color: inherit;
+}
+
 #widgetChart {
 	padding-top: 2px;
 	padding-left: 2px;
